--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="picture/1200px-Iowa_17.svg.png">
     <link rel="stylesheet" href="style/style.css">
 </head>
-<body>
+<body background="picture/1643330207_2-kartinkin-net-p-pattern-kubi-krasivie-2.png">
     <header>
         <h1>My project #17</h1>
         <div id="clock"></div>
